hphp/hack/test/typecheck/xhp_attr_spread_localize.php.exp
File "xhp_attr_spread_localize.php", line 23, characters 12-13:
Invalid xhp value for attribute :my-foo in :baz (Typing[4110])
File "xhp_attr_spread_localize.php", line 23, characters 4-6:
This is an object of exactly the class :baz
File "xhp_attr_spread_localize.php", line 19, characters 9-11:
It is incompatible with an object of exactly the class :foo
File "xhp_attr_spread_localize.php", line 7, characters 13-16:
  via this generic this
